crates/tests/other-db-tests/src/postgres/snapshots/other_db_tests__postgres__explain_tests__explain__select_where_variable.snap
---
source: crates/tests/other-db-tests/src/postgres/explain_tests.rs
expression: result.details.query
---
EXPLAIN
SELECT
  row_to_json("%1_universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%2_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_Album"."Title" AS "Title"
            FROM
              "public"."Album" AS "%0_Album"
            WHERE
              ("%0_Album"."Title" ~~ cast($1 as varchar))
            ORDER BY
              "%0_Album"."AlbumId" ASC
          ) AS "%2_rows"
      ) AS "%2_rows"
  ) AS "%1_universe"
